--- a/trunk/style.css
+++ b/trunk/style.css
@@ -1,5 +1,5 @@
-<?php
-/** WP Groove™ <https://wpgroove.com>
+/**
+ * WP Groove™ {@see https://wpgroove.com}
  *  _       _  ___       ___
  * ( )  _  ( )(  _`\    (  _`\
  * | | ( ) | || |_) )   | ( (_) _ __   _      _    _   _    __  ™
@@ -7,6 +7,7 @@
  * | (_/ \_) || |       | (_, )| |  ( (_) )( (_) )| \_/ |(  ___/
  * `\___x___/'(_)       (____/'(_)  `\___/'`\___/'`\___/'`\____)
  */
+
 /*
 Theme Name: Skeleton Theme
 Theme URI: https://wpgroove.com/product/skeleton-theme
