--- a/trunk/style.css
+++ b/trunk/style.css
@@ -9,7 +9,7 @@
  */
 
 /*
-Theme Name: Skeleton Theme
+Theme Name: {{name: Skeleton Theme}}
 Theme URI: https://wpgroove.com/product/skeleton-theme
 
 Description: This is a skeleton directory for new WP Groove WordPress themes.
